added test dialog element

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 
         <main>
           <h1>Main</h1>
+          <dialog class="book-form" id="dialog">
+            <form method="dialog">
+              <button type="submit">Close</button>
+            </form>
+          </dialog>
+          <button type="submit" class="add-book-btn" id="a-b-btn">
+            New Book
+          </button>
+
+          <p>
+            Dialog status: <span class="dialog-status" id="d-status"></span>
+          </p>
         </main>
 
         <footer>
