--- a/index.html
+++ b/index.html
@@ -7,27 +7,57 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body class="background-img">
+  <body class="background_img">
     <div class="overlay">
-      <div class="grid-div">
+      <div class="grid_div">
         <header>
           <h1>Nav</h1>
         </header>
 
         <main>
           <h1>Main</h1>
-          <dialog class="book-form" id="dialog">
-            <form method="dialog">
-              <button type="submit">Close</button>
-            </form>
-          </dialog>
-          <button type="submit" class="add-book-btn" id="a-b-btn">
+          <button type="submit" class="add_book_btn" id="a_b_btn">
             New Book
           </button>
 
-          <p>
-            Dialog status: <span class="dialog-status" id="d-status"></span>
-          </p>
+          <dialog class="book_form" id="dialog">
+            <form method="dialog">
+              <div class="dialog-header">
+                <h2 class="form_title">Add book</h2>
+                <button type="submit" class="close_btn">Close</button>
+              </div>
+              <div class="form_row">
+                <label for="book_title">Title</label>
+                <input type="text" id="book_title" name="book_title" />
+              </div>
+
+              <div class="form_row">
+                <label for="book_author">Author</label>
+                <input type="text" id="book_author" name="book_author" />
+              </div>
+
+              <div class="form_row">
+                <label for="book_pages">Pages</label>
+                <input type="number" id="book_pages" name="book_pages" />
+              </div>
+
+              <div class="form_row">
+                <div class="checkbox_container">
+                  <input type="checkbox" id="book_read" name="book_read" />
+                  <label for="book_read">Read</label>
+                </div>
+              </div>
+
+              <div class="btn_container">
+                <button type="submit" class="add_btn form_btn" id="add">
+                  Add
+                </button>
+                <button type="submit" class="cancel_btn form_btn" id="cancel">
+                  Cancel
+                </button>
+              </div>
+            </form>
+          </dialog>
         </main>
 
         <footer>
