fixed padding issues and set up main grid

--- a/index.html
+++ b/index.html
@@ -11,43 +11,87 @@
     <div class="overlay">
       <div class="grid_div">
         <header>
-          <h1>Nav</h1>
+          <h1>Litrater.</h1>
+          <button type="submit" class="add_book_btn" id="a_b_btn_2">
+            New Book
+          </button>
         </header>
-
         <main>
-          <h1>Main</h1>
+          <div class="book-display">
+            <div class="book-card">
+              <p class="title"></p>
+              <p class="author"></p>
+              <p class="pages"></p>
+            </div>
+            <div class="book-card">
+              <p class="title"></p>
+              <p class="author"></p>
+              <p class="pages"></p>
+            </div>
+            <div class="book-card">
+              <p class="title"></p>
+              <p class="author"></p>
+              <p class="pages"></p>
+            </div>
+            <div class="book-card">
+              <p class="title"></p>
+              <p class="author"></p>
+              <p class="pages"></p>
+            </div>
+            <div class="book-card">
+              <p class="title"></p>
+              <p class="author"></p>
+              <p class="pages"></p>
+            </div>
+            <div class="book-card">
+              <p class="title"></p>
+              <p class="author"></p>
+              <p class="pages"></p>
+            </div>
+          </div>
           <button type="submit" class="add_book_btn" id="a_b_btn">
             New Book
           </button>
 
+          <!--! -------------DIALOG FORM------------- !-->
           <dialog class="book_form" id="dialog">
             <form method="dialog">
-              <div class="dialog-header">
-                <h2 class="form_title">Add book</h2>
-                <button type="submit" class="close_btn">Close</button>
-              </div>
+              <!-- <div class="dialog-header"> -->
+
+              <button type="submit" class="close_btn">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="25"
+                  height="25"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    fill="currentColor"
+                    d="M15.854 12.854L11 8l4.854-4.854a.503.503 0 0 0 0-.707L13.561.146a.5.5 0 0 0-.707 0L8 5L3.146.146a.5.5 0 0 0-.707 0L.146 2.439a.5.5 0 0 0 0 .707L5 8L.146 12.854a.5.5 0 0 0 0 .707l2.293 2.293a.5.5 0 0 0 .707 0L8 11l4.854 4.854a.5.5 0 0 0 .707 0l2.293-2.293a.5.5 0 0 0 0-.707"
+                  />
+                </svg>
+              </button>
+
+              <h2 class="form_title form_row">Add book</h2>
+              <!-- </div> -->
               <div class="form_row">
                 <label for="book_title">Title</label>
                 <input type="text" id="book_title" name="book_title" />
               </div>
-
               <div class="form_row">
                 <label for="book_author">Author</label>
                 <input type="text" id="book_author" name="book_author" />
               </div>
-
               <div class="form_row">
                 <label for="book_pages">Pages</label>
                 <input type="number" id="book_pages" name="book_pages" />
               </div>
-
               <div class="form_row">
                 <div class="checkbox_container">
                   <input type="checkbox" id="book_read" name="book_read" />
                   <label for="book_read">Read</label>
                 </div>
               </div>
-
               <div class="btn_container">
                 <button type="submit" class="add_btn form_btn" id="add">
                   Add
@@ -59,9 +103,8 @@
             </form>
           </dialog>
         </main>
-
         <footer>
-          <h1>Footer</h1>
+          <p>jbprojects95 ©</p>
         </footer>
       </div>
     </div>
