slowly adding JS form logic

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           <!--! -------------DIALOG FORM------------- !-->
           <dialog class="book_form" id="dialog">
-            <form method="dialog">
+            <form method="dialog" id="add_book_form">
               <!-- <div class="dialog-header"> -->
 
               <button type="submit" class="close_btn">
@@ -93,8 +93,8 @@
                 </div>
               </div>
               <div class="btn_container">
-                <button type="submit" class="add_btn form_btn" id="add">
-                  Add
+                <button type="submit" class="add_btn form_btn" id="submit">
+                  Submit
                 </button>
                 <button type="submit" class="cancel_btn form_btn" id="cancel">
                   Cancel
