add button logic and fix grid overflow issue

--- a/index.html
+++ b/index.html
@@ -17,38 +17,7 @@
           </button>
         </header>
         <main>
-          <div class="book-display">
-            <div class="book-card">
-              <p class="title"></p>
-              <p class="author"></p>
-              <p class="pages"></p>
-            </div>
-            <div class="book-card">
-              <p class="title"></p>
-              <p class="author"></p>
-              <p class="pages"></p>
-            </div>
-            <div class="book-card">
-              <p class="title"></p>
-              <p class="author"></p>
-              <p class="pages"></p>
-            </div>
-            <div class="book-card">
-              <p class="title"></p>
-              <p class="author"></p>
-              <p class="pages"></p>
-            </div>
-            <div class="book-card">
-              <p class="title"></p>
-              <p class="author"></p>
-              <p class="pages"></p>
-            </div>
-            <div class="book-card">
-              <p class="title"></p>
-              <p class="author"></p>
-              <p class="pages"></p>
-            </div>
-          </div>
+          <div class="book-display"></div>
           <button type="submit" class="add_book_btn" id="a_b_btn">
             New Book
           </button>
@@ -58,7 +27,7 @@
             <form method="dialog" id="add_book_form">
               <!-- <div class="dialog-header"> -->
 
-              <button type="submit" class="close_btn">
+              <button type="submit" class="close_btn" id="cancel">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="25"
