add 5 star rating system to dialog

--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
         </header>
         <main>
           <div class="book-display"></div>
-
           <!--! -------------DIALOG FORM------------- !-->
           <dialog class="book_form" id="dialog">
             <form method="dialog" id="add_book_form">
               <!-- <div class="dialog-header"> -->
-
               <button type="submit" class="close_btn" id="close">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -37,7 +35,6 @@
                   />
                 </svg>
               </button>
-
               <h2 class="form_title form_row">Add book</h2>
               <!-- </div> -->
               <div class="form_row">
@@ -66,6 +63,90 @@
                 <div class="checkbox_container">
                   <input type="checkbox" id="book_read" name="book_read" />
                   <label for="book_read">Read</label>
+                </div>
+              </div>
+              <div class="form_row">
+                <div class="star_container">
+                  <a class="star" href="#">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="48"
+                      height="48"
+                      viewBox="0 0 48 48"
+                    >
+                      <path
+                        fill="currentColor"
+                        stroke="currentColor"
+                        stroke-linejoin="round"
+                        stroke-width="4"
+                        d="m23.999 5l-6.113 12.478L4 19.49l10.059 9.834L11.654 43L24 36.42L36.345 43L33.96 29.325L44 19.491l-13.809-2.013z"
+                      />
+                    </svg>
+                  </a>
+                  <a class="star" href="#">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="48"
+                      height="48"
+                      viewBox="0 0 48 48"
+                    >
+                      <path
+                        fill="currentColor"
+                        stroke="currentColor"
+                        stroke-linejoin="round"
+                        stroke-width="4"
+                        d="m23.999 5l-6.113 12.478L4 19.49l10.059 9.834L11.654 43L24 36.42L36.345 43L33.96 29.325L44 19.491l-13.809-2.013z"
+                      />
+                    </svg>
+                  </a>
+                  <a class="star" href="#">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="48"
+                      height="48"
+                      viewBox="0 0 48 48"
+                    >
+                      <path
+                        fill="currentColor"
+                        stroke="currentColor"
+                        stroke-linejoin="round"
+                        stroke-width="4"
+                        d="m23.999 5l-6.113 12.478L4 19.49l10.059 9.834L11.654 43L24 36.42L36.345 43L33.96 29.325L44 19.491l-13.809-2.013z"
+                      />
+                    </svg>
+                  </a>
+                  <a class="star" href="#">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="48"
+                      height="48"
+                      viewBox="0 0 48 48"
+                    >
+                      <path
+                        fill="currentColor"
+                        stroke="currentColor"
+                        stroke-linejoin="round"
+                        stroke-width="4"
+                        d="m23.999 5l-6.113 12.478L4 19.49l10.059 9.834L11.654 43L24 36.42L36.345 43L33.96 29.325L44 19.491l-13.809-2.013z"
+                      />
+                    </svg>
+                  </a>
+                  <a class="star" href="#">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="48"
+                      height="48"
+                      viewBox="0 0 48 48"
+                    >
+                      <path
+                        fill="currentColor"
+                        stroke="currentColor"
+                        stroke-linejoin="round"
+                        stroke-width="4"
+                        d="m23.999 5l-6.113 12.478L4 19.49l10.059 9.834L11.654 43L24 36.42L36.345 43L33.96 29.325L44 19.491l-13.809-2.013z"
+                      />
+                    </svg>
+                  </a>
                 </div>
               </div>
               <div class="btn_container">
