changed modal height to fit-content

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 </div>
               </div>
               <div class="form_row">
+                <label for="#">Rating:</label>
                 <div class="star_container">
                   <a class="star" href="#">
                     <svg
