added basic JS logic to star rating

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <div class="form_row">
                 <label for="#">Rating:</label>
                 <div class="star_container">
-                  <a class="star" href="#">
+                  <a class="star" href="#" data-star="5">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="48"
@@ -84,7 +84,7 @@
                       />
                     </svg>
                   </a>
-                  <a class="star" href="#">
+                  <a class="star" href="#" data-star="4">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="48"
@@ -100,7 +100,7 @@
                       />
                     </svg>
                   </a>
-                  <a class="star" href="#">
+                  <a class="star" href="#" data-star="3">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="48"
@@ -116,7 +116,7 @@
                       />
                     </svg>
                   </a>
-                  <a class="star" href="#">
+                  <a class="star" href="#" data-star="2">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="48"
@@ -132,7 +132,7 @@
                       />
                     </svg>
                   </a>
-                  <a class="star" href="#">
+                  <a class="star" href="#" data-star="1">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="48"
