--- a/index.html
+++ b/index.html
@@ -39,25 +39,15 @@
               <!-- </div> -->
               <div class="form_row">
                 <label for="book_title">Title*</label>
-                <input type="text" id="book_title" name="book_title" required />
+                <input type="text" id="book_title" name="book_title" />
               </div>
               <div class="form_row">
                 <label for="book_author">Author*</label>
-                <input
-                  type="text"
-                  id="book_author"
-                  name="book_author"
-                  required
-                />
+                <input type="text" id="book_author" name="book_author" />
               </div>
               <div class="form_row">
                 <label for="book_pages">Pages*</label>
-                <input
-                  type="number"
-                  id="book_pages"
-                  name="book_pages"
-                  required
-                />
+                <input type="number" id="book_pages" name="book_pages" />
               </div>
               <div class="form_row">
                 <div class="checkbox_container">
