changed delete logic for book_card

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="overlay">
       <div class="grid_div">
         <header>
-          <h1>Litrater.</h1>
+          <h1>Lit-rater.</h1>
           <button type="submit" class="add_book_btn" id="a_b_btn">
             New Book
           </button>
